# flickzeug

./: CHANGELOG.md  Cargo.toml  README.md  release-plz.toml
.github/workflows/: ci.yml  release-plz.yml  rustdoc.yml
src/: apply.rs  lib.rs
src/diff/: mod.rs
src/merge/: mod.rs
src/patch/: format.rs  mod.rs  parse.rs  parse_normal.rs
src/patch/snapshots/: flickzeug__patch__parse__tests__real_world_patches@0001-Fix-support-for-newer-GCC.patch.snap  flickzeug__patch__parse__tests__real_world_patches@0001-Force-CMake-to-use-the-correct-Python.patch.snap  flickzeug__patch__parse__tests__real_world_patches@0001-cross-findllvm.patch.snap  flickzeug__patch__parse__tests__real_world_patches@0001-linux-libxml2-CMakeLists.txt.patch.snap  flickzeug__patch__parse__tests__real_world_patches@0001-use-C-style-for-including-inttypes-in-bin-mqtt5_cana.patch.snap  flickzeug__patch__parse__tests__real_world_patches@0001-win-deprecations.patch.snap  flickzeug__patch__parse__tests__real_world_patches@0001-x86-maxrss-CMakeLists.txt.patch.snap  flickzeug__patch__parse__tests__real_world_patches@0002-Allow-to-specify-git-sha-through-environment-variabl.patch.snap  flickzeug__patch__parse__tests__real_world_patches@0002-Fix-lib-suffix.patch.snap  (+17 more)
src/snapshots/: flickzeug__apply__test__conda_launcher_patch.snap  flickzeug__apply__test__error_message_format.snap  flickzeug__apply__test__tectonic_patch_with_fuzz.snap
test-data/normal-diff/: add_only.diff  change_and_add.diff  complex.diff  delete_insert_delete.diff  new1.txt  new2.txt  new3.txt  new4.txt
